[FIX] spreadsheet_dashboard: fix star icon on mobile
The star icon on mobile would have a strange behaviour. After clicking
it, the star would not change between filled/not filled until clicking
elsewhere.

It turns out that on mobile, after a click the hover rule is applied.
And our hover rule would modify the icon to be the opposite of what
it should be.

This commit changes the CSS to use the same css as `BooleanFavoriteField`
to stay consistent with the rest of Odoo.

closes odoo/odoo#229605

Task: 5092945
X-original-commit: 471f5edd7496b7b89e97489e000272e39914405a

--- a/addons/spreadsheet_dashboard/static/src/bundle/dashboard_action/dashboard_action.scss
+++ b/addons/spreadsheet_dashboard/static/src/bundle/dashboard_action/dashboard_action.scss
@@ -111,18 +111,12 @@
 
     .o_dashboard_star {
         margin: auto 0;
-        @include o-hover-text-color($gray-400, $o-main-favorite-color);
-
-        &:hover:before {
-            content: "\f005";
+        cursor: pointer;
+        &.fa-star-o {
+            @include o-hover-text-color($o-main-color-muted, $o-main-favorite-color);
         }
-
-        &.favorite_button_enabled {
-            @include o-hover-text-color($o-main-favorite-color, $gray-400);
-
-            &:hover:before {
-                content: "\f006";
-            }
+        &.fa-star {
+            color: $o-main-favorite-color;
         }
     }
 }
